# gtfsfabrik

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/commands/: init.md
docs/src/tips/: tips-overview.md
example-fabrik/: fabrik.toml
src/: lib.rs  main.rs
src/algorithms/: RAPTOR.rs  mod.rs
src/algorithms/raptor/: api.rs  cache.rs  conceptual.md  gtfs_loader.rs  loader.rs  mcraptor.rs  mod.rs  new_raptor.rs  simple_raptor.rs  transfers.rs  types.rs  utils.rs
src/commands/: init.rs  interactive.rs  mod.rs  run.rs
src/errors/: commands.rs  fabrik.rs  gtfs.rs  mod.rs  osm.rs  parsing.rs  raptor.rs
src/fabrik_io/: logging.rs  mod.rs
src/files/: gtfs.rs  mod.rs  osm.rs
src/files/toml/: agencies.rs  config.rs  fabrik.rs  gtfs_dirs.rs  lines.rs  mod.rs  osm_files.rs  ridership_files.rs  scenarios.rs  state.rs  stations.rs  vehicles.rs
src/gtfs/: datetime.rs  mod.rs  types.rs
src/gtfs/types/: mod.rs  route.rs  stop.rs  trip.rs
src/osm/: mod.rs  types.rs
src/types/: agency.rs  fabrik.rs  geotypes.rs  gtfs_dir.rs  line.rs  mod.rs  scenario.rs  station.rs  vehicle.rs
src/utils/: enums.rs  errors.rs  files.rs  geotypes.rs  mod.rs
src/utils/files/: gtfs.rs  mod.rs  osm.rs
src/utils/toml/: fabrik.rs
tests/: init_test.rs  mod.rs
tests/algorithms/: mod.rs  raptor.rs
tests/files/: gtfs.rs  osm.rs
tests/inputs/files/: example_osm.pbf
