[package]
name = "gtfsfabrik"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "color"] }
console = "0.16.3"
csv = "1.4.0"
geo = { version = "0.32.0", features = ["serde"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.7"
zip = "8.3.0"

[dev-dependencies]
tempfile = "3.27.0"
criterion = { version = "0.5", features = ["html_reports"] } # plan to use for benchmarking!

