[package]
name = "gtfsfabrik"
version = "0.1.1" # v0.1.1 (mostly working) RAPTOR implementation
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["color", "derive"] }
console = "0.16.3"
dirs = "6.0.0"
geo = { version = "0.32.0", features = ["serde"] }
polars = "0.53.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.7"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
zip = "8.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }  # plan to use for benchmarking!
tempfile = "3.27.0"
rand = "0.8.0"

